@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.11.9-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-11-09 08:58:12, took 00:15:45, with 50 workers, on 4067 cases, 0 failed, 0 traces, 5 retries<br/>
+tested: 2025-11-09 09:33:21, took 00:13:39, with 50 workers, on 4068 cases, 0 failed, 0 traces, 5 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -439,6 +439,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sreth11.tst">conn-sreth11.tst</a></td><td>success</td><td>ethernet tunneling with sreth</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sreth12.tst">conn-sreth12.tst</a></td><td>success</td><td>vlan tunneling with sreth</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sreth13.tst">conn-sreth13.tst</a></td><td>success</td><td>tunnel interface with sreth</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-sreth14.tst">conn-sreth14.tst</a></td><td>success</td><td>sreth server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-ssh.tst">conn-ssh.tst</a></td><td>success</td><td>ppp over ssh</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-sstp.tst">conn-sstp.tst</a></td><td>success</td><td>ppp over sstp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-stp.tst">conn-stp.tst</a></td><td>success</td><td>spantree over ethernet</td></tr>
